--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ajedrez</title>
     <link rel="stylesheet" href="/style/style.css">
 </head>
 <body>
     <div id="root">
-        <div class="board">
-            
+        <div class="Board">
+        </div>  
     </div>
     <script src="/app/index.js"></script>
 </body>
