cambio de piezas funcional

--- a/index.html
+++ b/index.html
@@ -7,10 +7,18 @@
     <link rel="stylesheet" href="/style/style.css">
 </head>
 <body>
-    <div id="root">
-        <div class="Board">
-        </div>  
-    </div>
+    <main>
+        <select name="style" id="pieceStyle">
+            <option value="style1">Style 1</option>
+            <option value="style2">Style 2</option>
+            <option value="style3">Style 3</option>
+        </select>
+        <div id="root">
+            <div class="Board">
+            </div>  
+        </div>
+    </main>
+    
     <script src="/app/index.js"></script>
 </body>
 </html>
