--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
     </main>
     
     <script src="/app/index.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
 </body>
 </html>
