agregado de los movimientos de las piezas

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
             <div class="Board">
             </div>  
         </div>
+        <div>
+            <h3>Historial de movimientos</h3>
+            <div id="move-history"></div>
+        </div>
+        <button onclick="clearMoveHistory()">Limpiar historial</button>
+
     </main>
     
     <script src="/app/index.js"></script>
